fix: ok, hopefully this fixes the responsiveness issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,17 @@
     --color-bracket-1: #ffc814;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     border: 1px solid var(--color-border);
 
     background-color: var(--color-page-background);
     margin: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     box-sizing: border-box;
 
     display: flex;
